fix vert align text hmw10

--- a/Lesson10/css/main.css
+++ b/Lesson10/css/main.css
@@ -40,6 +40,6 @@ body {
 
 div > p {
   text-align: center;
-  line-height: 2vh;
+  margin-top: 0.675em;
   font-size: 2.5vw;
 }
